Added menu module and finished menu loading

--- a/src/index.html
+++ b/src/index.html
@@ -13,20 +13,12 @@
                 <h2>Kutsara at Tinidor</h2>
                 <li><a href="#" id="home" class="selected">Home</a></li>
                 <li><a href="#" id="menu">Menu</a></li>
-                <li><a href="#" id="about">About</a></li>
+                <li><a href="#" id="contact-us">Contact Us</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <div id="content">
-            <div class="description">
-                <div class="desc-text first-item">
-                    <h1>Adobo</h1>
-                    <p>Adobo is a classic Filipino dish that is sure to tantalize your taste buds. The dish is made by stewing meat, seafood, or vegetables in a mixture of soy sauce, vinegar, garlic, and other spices. The result is a tangy and savory flavor that is sure to leave you wanting more.</p>
-                </div>
-                <div class="desc-pic adobo first-item"></div>
-            </div>
-        </div>
+        <div id="content"></div>
     </main>
 </body>
 </html>
